force-app/main/default/objects/VG_UMR__c/VG_UMR__c.object-meta.xml
<CustomObject>
    <label>Capacity Details</label>
    <nameField>
        <label>Unique Market Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capacity Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>