force-app/main/default/objects/VG_UMR__c/fields/Net_MGA_Commission_Option__c.field-meta.xml
<CustomField>
    <fullName>Net_MGA_Commission_Option__c</fullName>
    <label>Net MGA Commission Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>