force-app/main/default/objects/VG_UMR__c/fields/RI_Share_Cap__c.field-meta.xml
<CustomField>
    <fullName>RI_Share_Cap__c</fullName>
    <label>Commission Cap (%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>