force-app/main/default/objects/VG_UMR__c/fields/VG_Account__c.field-meta.xml
<CustomField>
    <fullName>VG_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Capacity)</relationshipLabel>
    <relationshipName>UMR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>