force-app/main/default/objects/VG_UMR__c/fields/VG_Binder_Notification__c.field-meta.xml
<CustomField>
    <fullName>VG_Binder_Notification__c</fullName>
    <label>Binder Notification(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>