force-app/main/default/objects/VG_UMR__c/fields/VG_Capacity_Manager__c.field-meta.xml
<CustomField>
    <fullName>VG_Capacity_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capacity Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capacity_Details</relationshipName>
    <type>Lookup</type>
</CustomField>