force-app/main/default/objects/VG_UMR__c/fields/VG_Capacity_Paper__c.field-meta.xml
<CustomField>
    <fullName>VG_Capacity_Paper__c</fullName>
    <label>Section No</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PI Liberty 100%</fullName>
            </value>
            <value>
                <fullName>PI Liberty Co</fullName>
            </value>
            <value>
                <fullName>PI Liberty Lloyds</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual VFP</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - FI</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - D&amp;O/Crime</fullName>
            </value>
            <value>
                <fullName>Warranty &amp; Indemnity</fullName>
            </value>
            <value>
                <fullName>CE - VSR</fullName>
            </value>
            <value>
                <fullName>CE - VSR Amwin</fullName>
            </value>
            <value>
                <fullName>Greenlight Re</fullName>
            </value>
            <value>
                <fullName>Fidelis</fullName>
            </value>
            <value>
                <fullName>AGCS</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - FI (FY 2019)</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - FI (FY 2020)</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - FI (Section A - 2020)</fullName>
            </value>
            <value>
                <fullName>VSR - FI - Amwin</fullName>
            </value>
            <value>
                <fullName>Liberty Mutual - FI (Section A - 2019)</fullName>
            </value>
            <value>
                <fullName>Hazardous</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Haulage</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Non Conventional</fullName>
            </value>
            <value>
                <fullName>Liberty &amp; Everest</fullName>
            </value>
            <value>
                <fullName>Liberty Only</fullName>
            </value>
            <value>
                <fullName>VSR - FI - Allianz</fullName>
            </value>
            <value>
                <fullName>VSR - FI - Aspen</fullName>
            </value>
            <value>
                <fullName>VSR - FI - RSUI</fullName>
            </value>
            <value>
                <fullName>Bridge Default</fullName>
            </value>
            <value>
                <fullName>VSR - AmWINS - Defense Only</fullName>
            </value>
            <value>
                <fullName>VSR - AmWINS - Funds Mgmt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>