force-app/main/default/objects/VG_UMR__c/fields/VG_Currency__c.field-meta.xml
<CustomField>
    <fullName>VG_Currency__c</fullName>
    <label>Original Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VG_Currency</valueSetName>
    </valueSet>
</CustomField>