force-app/main/default/objects/VG_UMR__c/fields/VG_Fronting_UMR__c.field-meta.xml
<CustomField>
    <fullName>VG_Fronting_UMR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fronting UMR</label>
    <referenceTo>VG_UMR__c</referenceTo>
    <relationshipLabel>Capacity Details</relationshipLabel>
    <relationshipName>Capacity_Details</relationshipName>
    <type>Lookup</type>
</CustomField>