force-app/main/default/objects/VG_UMR__c/fields/VG_MGA_Commission__c.field-meta.xml
<CustomField>
    <fullName>VG_MGA_Commission__c</fullName>
    <label>Commission (%)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>