force-app/main/default/objects/VG_UMR__c/fields/VG_MGA_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>VG_MGA_Commission_Amount__c</fullName>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>