force-app/main/default/objects/VG_UMR__c/fields/VG_NAIC_FEIN_Code__c.field-meta.xml
<CustomField>
    <fullName>VG_NAIC_FEIN_Code__c</fullName>
    <label>NAIC/ FEIN Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>