force-app/main/default/objects/VG_UMR__c/fields/VG_Premium_Limit__c.field-meta.xml
<CustomField>
    <fullName>VG_Premium_Limit__c</fullName>
    <label>Premium Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>