force-app/main/default/objects/VG_UMR__c/fields/VG_Retrocession__c.field-meta.xml
<CustomField>
    <fullName>VG_Retrocession__c</fullName>
    <label>Retrocession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>