force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Binder_Broker__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Binder_Broker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Binder Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (RI Binder Broker)</relationshipLabel>
    <relationshipName>UMR1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>