force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Binder_Commission__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Binder_Commission__c</fullName>
    <label>Binder Broker Commission (%)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>