force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Binder_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Binder_Commission_Amount__c</fullName>
    <formula>VG_RI_Binder_Commission__c * VG_RI_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Binder Broker Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>