force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Coverage__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Coverage__c</fullName>
    <label>RI Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M3 - Fully Comprehensive</fullName>
            </value>
            <value>
                <fullName>M6 - Third Party Fire &amp; Theft</fullName>
            </value>
            <value>
                <fullName>M6 - Third Party Only</fullName>
            </value>
            <value>
                <fullName>M6 - Fire &amp; Theft Only</fullName>
            </value>
            <value>
                <fullName>7T</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>D3</fullName>
            </value>
            <value>
                <fullName>D4</fullName>
            </value>
            <value>
                <fullName>D5</fullName>
            </value>
            <value>
                <fullName>D6</fullName>
            </value>
            <value>
                <fullName>D7</fullName>
            </value>
            <value>
                <fullName>TR, X3, XC, XR</fullName>
            </value>
            <value>
                <fullName>B4, B5, P3, P5, P7, 6T, 7T, LE</fullName>
            </value>
            <value>
                <fullName>CB, CC</fullName>
            </value>
            <value>
                <fullName>XM, XN</fullName>
            </value>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>KX, XG, XH</fullName>
            </value>
            <value>
                <fullName>BB, D3, D5, D7, D9, E3, E5, E7, E9, F3, F5, NA, W4, FG, GM</fullName>
            </value>
            <value>
                <fullName>GX, TX, VX, X2, XE, XT</fullName>
            </value>
            <value>
                <fullName>B, CT, GS, JB, G, GC, O, T, TS, V</fullName>
            </value>
            <value>
                <fullName>NX</fullName>
            </value>
            <value>
                <fullName>CY, CZ, KS, KT, N, NB</fullName>
            </value>
            <value>
                <fullName>XY, X1</fullName>
            </value>
            <value>
                <fullName>VL, EG, EH, EZ, EA, EB, EF, H2, H3, L2, L3, AO, AP</fullName>
            </value>
            <value>
                <fullName>SC, SO, SL, V &amp; AP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>