force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Inception_Date__c</fullName>
    <label>Inception Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>