force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Product__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Product__c</fullName>
    <label>RI Product</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Casualty</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Financial Lines</fullName>
            </value>
            <value>
                <fullName>Leisure and Sport</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Professions</fullName>
            </value>
            <value>
                <fullName>Facultative and Treaty Property and Casualty Reinsurance</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>