force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Referral_Limit_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Referral_Limit_Premium__c</fullName>
    <label>Referral Premium Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>