force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Referral_Limit_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Referral_Limit_Sum_Insured__c</fullName>
    <label>Referral Sum Insured Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>