force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Share__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Share__c</fullName>
    <label>Cession Share (%)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>