force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Share_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Share_Type__c</fullName>
    <label>Cession Share Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proportional</fullName>
            </value>
            <value>
                <fullName>Non-proportional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>