force-app/main/default/objects/VG_UMR__c/fields/VG_RI_Sum_Insured_Limit__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Sum_Insured_Limit__c</fullName>
    <label>Sum Insured Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>