force-app/main/default/objects/VG_UMR__c/fields/VG_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capacity</fullName>
                <default>true</default>
                <label>Capacity</label>
            </value>
            <value>
                <fullName>Co-Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>