force-app/main/default/objects/VG_UMR__c/recordTypes/Horizon.recordType-meta.xml
<RecordType>
    <fullName>Horizon</fullName>
    <active>true</active>
    <label>Horizon</label>
</RecordType>