force-app/main/default/objects/VG_UMR__c/validationRules/Capacity_Details_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Details_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(VG_RI_Product__c),ISBLANK(VG_RI_Coverage__c),ISBLANK(TEXT(VG_RI_Type__c)),ISBLANK(TEXT(VG_RI_Share_Type__c)),ISBLANK(VG_RI_Inception_Date__c),ISBLANK(VG_RI_Expiry_Date__c),ISBLANK(VG_RI_Binder_Broker__c),ISBLANK(TEXT(VG_Currency__c)))</errorConditionFormula>
    <errorMessage>Please enter all capacity details [RI Product, RI Coverage, RI Type, RI Share Type, RI Inception Date, RI Expiry Date, RI Binder Broker, Currency]</errorMessage>
</ValidationRule>