force-app/main/default/objects/VG_UMR__c/validationRules/Capacity_Financials_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Financials_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(VG_RI_Share__c), ISBLANK(VG_MGA_Commission__c), ISBLANK(VG_RI_Binder_Commission__c))</errorConditionFormula>
    <errorMessage>Please enter capacity financial [RI Share (%), MGA Commission (%), RI Binder Commission (%)]</errorMessage>
</ValidationRule>