force-app/main/default/objects/VG_UMR__c/validationRules/Capacity_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Manager</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( VG_Capacity_Manager__c )</errorConditionFormula>
    <errorDisplayField>VG_Capacity_Manager__c</errorDisplayField>
    <errorMessage>Please select a Capacity Manager</errorMessage>
</ValidationRule>