force-app/main/default/objects/VG_UMR__c/validationRules/CD_Name_Updation.validationRule-meta.xml
<ValidationRule>
    <fullName>CD_Name_Updation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNEW() ) , ISCHANGED( Name ) )</errorConditionFormula>
    <errorMessage>Cannot update Capacity Details number</errorMessage>
</ValidationRule>