force-app/main/default/objects/VG_UMR__c/validationRules/Name_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter Unique Market Reference</errorMessage>
</ValidationRule>