force-app/main/default/objects/VG_UMR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>VG_Capacity_Paper__c</columns>
    <columns>VG_RI_Inception_Date__c</columns>
    <columns>VG_RI_Expiry_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>VG_Account__c</columns>
    <columns>VG_RI_Share__c</columns>
    <columns>VG_Retrocession__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>