force-app/main/default/objects/VG_UMR__c/listViews/Bridge.listView-meta.xml
<ListView>
    <fullName>Bridge</fullName>
    <columns>NAME</columns>
    <columns>VG_Account__c</columns>
    <columns>VG_RI_Inception_Date__c</columns>
    <columns>VG_RI_Expiry_Date__c</columns>
    <columns>VG_Premium_Limit__c</columns>
    <columns>VG_Retrocession__c</columns>
    <columns>VG_Capacity_Paper__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VG_UMR__c.VG_Bridge</value>
    </filters>
    <label>Bridge</label>
</ListView>