force-app/main/default/objects/VG_UMR__c/listViews/Capped_UMR.listView-meta.xml
<ListView>
    <fullName>Capped_UMR</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RI_Share_Cap__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Capped UMR</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>