force-app/main/default/objects/VG_UMR__c/listViews/Horizon.listView-meta.xml
<ListView>
    <fullName>Horizon</fullName>
    <columns>NAME</columns>
    <columns>VG_Account__c</columns>
    <columns>VG_RI_Inception_Date__c</columns>
    <columns>VG_RI_Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VG_UMR__c.Horizon</value>
    </filters>
    <label>Horizon</label>
</ListView>