force-app/main/default/objects/VG_UMR__c/listViews/VFP.listView-meta.xml
<ListView>
    <fullName>VFP</fullName>
    <columns>NAME</columns>
    <columns>VG_Account__c</columns>
    <columns>VG_Volante_Entities__c</columns>
    <columns>VG_Capacity_Paper__c</columns>
    <columns>VG_RI_Inception_Date__c</columns>
    <columns>VG_RI_Expiry_Date__c</columns>
    <columns>VG_Premium_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VG_UMR__c.VFP</value>
    </filters>
    <label>VFP</label>
</ListView>